-メニューバー, メニューウィンドウ, コマンドハンドラ, ファイルダイアログの追加実装.

--- a/Canaria32/Canaria32.vcproj
+++ b/Canaria32/Canaria32.vcproj
@@ -179,7 +179,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\c_string_utility.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\CustomControl.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\FileDialog.cpp"
 				>
 			</File>
 			<File
@@ -188,6 +196,14 @@
 			</File>
 			<File
 				RelativePath=".\MainWindow.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\MenuBar.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\MenuWindow.cpp"
 				>
 			</File>
 			<File
@@ -213,7 +229,19 @@
 				>
 			</File>
 			<File
+				RelativePath=".\c_string_utility.h"
+				>
+			</File>
+			<File
 				RelativePath=".\CustomControl.h"
+				>
+			</File>
+			<File
+				RelativePath=".\FileDialog.h"
+				>
+			</File>
+			<File
+				RelativePath=".\HandlerConditions.h"
 				>
 			</File>
 			<File
@@ -222,6 +250,14 @@
 			</File>
 			<File
 				RelativePath=".\MainWindow.h"
+				>
+			</File>
+			<File
+				RelativePath=".\MenuBar.h"
+				>
+			</File>
+			<File
+				RelativePath=".\MenuWindow.h"
 				>
 			</File>
 			<File
